# a-simple-auto-completion-system

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
